2021-03-09      3.7002  Data updates

2021-02-04      3.7001  Data from OFCOM/CNAC/NPA/localcallingguide.com squirreled
                          away during builds for greater reproducibility;
                        Data updates

2020-12-04      3.7000  Bugfixes in dial_to for stubs and unallocated UK numbers;
                        Windows doesn't properly support fork() so skip the tests for it;
                        Minor documentation clarification re constructor;
                        Stub classes shrunk by de-duping areanames;
                        Kosovo appears to have fully switched to using its own country code;
                        Option to build --without_uk and save disk space
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/95);
                        Correctly identify UK 04, 05[01234789], and 06 numbers as invalid,
                          instead of valid but unallocated (fix arising from
                          https://github.com/DrHyde/perl-modules-Number-Phone/issues/98);
                        Use data from a tagged release of libphonenumber instead of whatever
                          is in master, so builds are more reproducible, and expose that
                          tag in libphonenumber_tag method;
                        Expose OFCOM, CNAC, NPA and localcallingguide.com data update
                          date/time in N::P::{UK,NANP::CA,NANP::US,NANP}->data_source;
                        Data updates

2020-09-04      3.6006  Data updates

2020-06-06      3.6005  Data updates

2020-05-11      3.6004  Data updates;
                        Improved doco on the data update policy :-)

2020-04-27      3.6003  Testing improvements for fork()ing code;
                        Data updates

2020-03-09      3.6002  Data updates

2019-12-11      3.6001  Inmarsat +871 to +874 have been de-commissioned;
                        Added some US overlay codes (not all are in use yet);