@@ -1,3 +1,7 @@
+XXXX-XX-XX      XXXXXX  Data updates;
+                        Add deprecation warning for platforms with 32 bit int (support will
+                          go away some time after 2023-06-01 with no further warning)
+
 2021-03-09      3.7002  Data updates
 
 2021-02-04      3.7001  Data from OFCOM/CNAC/NPA/localcallingguide.com squirreled
